fix: week from mon and alignments

--- a/src/features/notes/components/NotesCalendar.scss
+++ b/src/features/notes/components/NotesCalendar.scss
@@ -27,4 +27,8 @@
   .rdp-chevron {
     fill: $blue3;
   }
+
+  .rdp-month_caption {
+    padding-left: 12px;
+  }
 }
